# interaction_network_pytorch

./: .gitignore  CLAUDE.md  CONSTITUTION.md  PLANNING.md  PRD.md  SCRATCHPAD.md  TASKS.md  VERSIONS.md  pyproject.toml
.claude/commands/: summcommit.md
configs/: in_intercept.yaml  in_vis.yaml  in_vis_and_occ.yaml  in_vis_occ.yaml
data/: README.md
dmfc/: __init__.py
dmfc/analysis/: __init__.py  endpoint_decoding.py  neural_consistency.py  rdm.py  reproduce_fig4.py  reproduce_fig5b.py  run_m5_stats.py  simulation_index.py  stats.py  two_stage_endpoint.py  validate_pipeline.py
dmfc/envs/: __init__.py  conditions.py  mental_pong.py  random_conditions.py
dmfc/models/: __init__.py  _upstream_in.py  interaction_network.py
dmfc/rajalingham/: __init__.py  load.py
dmfc/training/: __init__.py  config.py  losses.py  train.py
scripts/: gen_sweep_matrix.py  submit_intercept_hp.sbatch  submit_m5_sweep.sbatch  sweep_matrix.csv
tests/: test_endpoint_decoding.py  test_losses.py  test_mental_pong.py  test_neural_consistency.py  test_rajalingham_load.py  test_random_conditions.py  test_rdm.py  test_reproduce_fig4.py  test_reproduce_fig5b.py  test_run_m5_stats.py  test_simulation_index.py  test_smoke.py  test_stats.py  test_training.py  test_two_stage_endpoint.py  test_validate_pipeline.py
