[project]
name = "interaction-networks-dmfc"
version = "0.0.0"
description = "Interaction-network model of macaque DMFC on Mental Pong (Rajalingham et al. 2025 replication + extension)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "David Behery", email = "davidbehery@fas.harvard.edu" },
]

# Pinned to exact versions per CONSTITUTION reproducibility rules.
# Mirror this list in VERSIONS.md.
dependencies = [
    "torch==2.4.1",
    "numpy==1.26.4",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "pandas==2.2.3",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dmfc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
files = ["dmfc"]
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
